Fixed double scroll on Nav & footer on tablet

--- a/src/index.css
+++ b/src/index.css
@@ -32,4 +32,6 @@ body {
   background-color: var(--bg-color);
   font-family: "Montserrat";
   color: var(--white);
+  height: 100vh;
+  width: 100vw;
 }
